# fastapi-prisma-sample

./: README.md  pyproject.toml
prisma/: database.db  schema.prisma
prisma/migrations/20240608133800_add_title/: migration.sql
prisma/migrations/20240608151614_/: migration.sql
src/fastapi_prisma/: __init__.py  main.py
